--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(HW2)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(HW2 main2.cpp library2.h library2.cpp MusicManager.cpp MusicManager.h HashTable.h)
+add_executable(HW2 main2.cpp library2.h library2.cpp MusicManager.cpp MusicManager.h HashTable.h DS_AVL.h)
